# ToDoProject

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: SignIn.cpp.53D38156463F71F4.idx  SignIn.h.16FFDD6D83C20275.idx  main.cpp.0396768792FB5BCD.idx
src/: CMakeLists.txt  UserRegistration.cpp  UserRegistration.h  Utils.cpp  Utils.h  main  main.cpp
src/Data/: CMakeLists.txt  SQL_Abstract.cpp  SQL_Abstract.h  SQL_Operations.cpp  SQL_Operations.h
src/Manager/: CMakeLists.txt  SQL_Operations.h  UserHandler.cpp  UserHandler.h
src/Model/: CMakeLists.txt  Card.cpp  Card.h  Table.cpp  Table.h  User.h  UserHandler.cpp  UserHandler.h
src/UserManager/: CMakeLists.txt  SignIn.cpp  SignIn.h  UserHandler.cpp  UserHandler.h  UserRegistration.cpp  UserRegistration.h
src/Utils/: CMakeLists.txt  Utils.cpp  Utils.h
src/View/: CMakeLists.txt  MainView.cpp  MainView.h  Runner.cpp  Runner.h  Signer.cpp  Signer.h  SignerWindow.cpp  SignerWindow.h
src/View/Controls/: Button.cpp  Button.h  CMakeLists.txt  Mouse.cpp  Mouse.h
src/build_src/: build_compile_run.sh  todop
src/main.dSYM/Contents/Resources/DWARF/: main
src/user_manager/: CMakeLists.txt  registration.cpp  registration.h
test/: CMakeLists.txt  SQL_Operations_Mock.cpp  SQL_Operations_Mock.h  build_compile_run_tests.sh  cmakefile.txt  data_sql_test.cpp  main.cpp  user_handler_test.cpp
test/build_test/: hello_test  hello_test[1]_include.cmake  hello_test[1]_tests.cmake  todo_tests[1]_include.cmake  todo_tests[1]_tests.cmake  user_handler_test[1]_include.cmake
