add_executable(todop main.cpp Utils.cpp)
add_subdirectory(View)
add_subdirectory(Model)
add_subdirectory(Manager)
target_include_directories(todop PUBLIC Manager Model View /usr/local/Cellar/sdl2/2.0.20/include/SDL2)
target_link_directories(todop PUBLIC Manager Model view)
target_link_libraries(todop PUBLIC manager models view /usr/local/Cellar/sdl2/2.0.20/lib/libSDL2-2.0.0.dylib)
